# phostt

./: .dockerignore  .gitignore  ANDROID.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cuda  LICENSE  README.md  README_RU.md  SECURITY.md  TODO.md  build.rs  deny.toml  docker-compose.yml  pyproject.toml
.cargo/: audit.toml  config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  check-ort-stable.yml  ci.yml  docker.yml  docs.yml  homebrew.yml  pypi.yml  release.yml  soak.yml
Formula/: gigastt.rb  phostt.rb
benches/: latency.rs
docs/: asyncapi.yaml  deployment.md  runbook.md  verifying-releases.md
docs/archive/superpowers-v0.4/plans/: 2026-04-13-flexible-sample-rate.md  2026-04-13-http-rest-sse.md  2026-04-13-speaker-diarization.md
docs/archive/superpowers-v0.4/specs/: 2026-04-13-v0.4-features-design.md
examples/: KotlinClient.kt  bun_client.ts  go_client.go  python_binding.py  python_client.py
ffi/android/: PhosttBridge.kt
python/phostt/: __init__.py
scripts/: benchmark.sh  prepare_fleurs_benchmark.py
specs/: 001-pool-metrics-reliability.md  002-rest-handler-unit-tests.md  005-graceful-shutdown-unit-tests.md  plan.md  prod-readiness-v1.0.md  todo.md
specs/archive/design-v1.0/: design-v1.0-pool-and-rate-limit.md  design-v1.0-rest-streaming.md  design-v1.0-ws-lifecycle.md
src/: error.rs  ffi.rs  inspect.rs  lib.rs  main.rs  onnx_proto.rs  python.rs  quantize.rs
src/inference/: audio.rs  decode.rs  diarization.rs  engine.rs  features.rs  mod.rs  pool.rs  streaming.rs  tokenizer.rs
src/model/: mod.rs
src/protocol/: mod.rs
src/server/: http.rs  metrics.rs  mod.rs  openapi.rs  rate_limit.rs  redis_rate_limit.rs
src/server/ws/: mod.rs
tests/: benchmark.rs  benchmark_report.rs  e2e_errors.rs  e2e_rate_limit.rs  e2e_rest.rs  e2e_shutdown.rs  e2e_ws.rs  ep_smoke.rs  ffi_streaming.rs  ffi_stress.rs  fleurs_wer.rs  load_test.rs  soak_test.rs  wer.rs
tests/common/: mod.rs
tests/fixtures/: manifest.json
