[package]
name = "phostt"
version = "0.1.0"
edition = "2024"
description = "Local STT server powered by Zipformer-vi RNN-T — on-device Vietnamese speech recognition via ONNX Runtime"
license = "MIT"
repository = "https://github.com/ekhodzitsky/phostt"
keywords = ["stt", "speech-recognition", "zipformer", "onnx", "vietnamese"]
categories = ["multimedia::audio", "command-line-utilities"]

[features]
default = []
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]
diarization = []
# `quantize` retained as a no-op feature flag — phostt ships pre-quantized
# Zipformer-vi INT8 weights from upstream sherpa-onnx, so no in-tree
# quantization step is required on the user's hot path.
quantize = []

[dependencies]
# ONNX Runtime
ort = "2.0.0-rc.12"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Async MPMC channel — backs the SessionPool (FIFO + close semantics)
async-channel = "2"

# HTTP + WebSocket server (single port via axum)
axum = { version = "0.8", features = ["ws", "multipart"] }
futures-util = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP client for model download
reqwest = { version = "0.13", features = ["stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Cryptographic hashing for model verification
sha2 = "0.10"

# FFT for mel spectrogram
rustfft = "6"

# High-quality audio resampling
rubato = "0.16"

# Async stream adapters (ReceiverStream for SSE)
tokio-stream = "0.1"

# Cancellation + task tracking for graceful WS/SSE drain on shutdown.
# `rt` pulls in `CancellationToken` + `TaskTracker` (tokio-util 0.7).
tokio-util = { version = "0.7", features = ["rt"] }

# Audio file reading (for `transcribe` command)
symphonia = { version = "0.5", features = ["aac", "isomp4", "mp3", "ogg", "flac", "pcm", "wav"] }

# Bundle extraction for the upstream sherpa-onnx Zipformer-vi release tarball
# (`*.tar.bz2`). `bzip2` links against system libbz2 (preinstalled on macOS,
# `libbz2-dev` on Debian); `tar` is pure Rust.
tar = "0.4"
bzip2 = "0.6"

# Explicit pin for zero-copy byte buffers shared with symphonia (used by the
# REST upload decode path). Already transitive via axum/tokio; pinning makes
# the dependency direct so the zero-copy decode contract is discoverable.
bytes = "1"

# Per-IP rate limiting (token bucket, optional — off by default).
# Implemented in `src/server/rate_limit.rs`; `dashmap` gives lock-free reads.
dashmap = "6"

# ONNX protobuf types for the legacy in-tree quantization pipeline
# (`src/quantize.rs`). Kept available for downstream re-quantization
# experiments even though phostt's hot path uses pre-quantized upstream
# weights.
prost = "0.13"

[build-dependencies]
# Regenerates ONNX types from `proto/onnx.proto` into `OUT_DIR/onnx.rs`
# at build time. Requires `protoc` in `PATH` (see `build.rs`).
prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.29"
# `tracing-subscriber` is declared in `[dependencies]`; cargo already exposes
# it to integration tests, so no separate dev-dep is needed.

[profile.release]
lto = true
codegen-units = 1
strip = true
